manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ttp-offical-website-f
  namespace: kube-ops
  labels:
    app: ttp-offical-website-f
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: ttp-offical-website-f
